# butlern

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agents.md  bot.py  config.toml.example  docker-compose.yml  guild_settings.json  pyproject.toml
.github/workflows/: ci.yml  linear-release.yml
butler/: DEPRECATED.py  __init__.py  app.py  bot_events.py  config.py  constants.py  design.py  discord_helpers.py  event_logic.py  permissions.py  rsvp_domain.py  rsvp_view.py  settings_store.py
butler/rsvp/: ArrivingLaterModal.py  AvailabilityView.py  RoomLinkModal.py  RoomManagementRoomLinkModal.py  RoomManagementView.py  event_command.py  recurrence_adapter.py  rsvp_domain.py  rsvp_render.py  rsvp_store.py  rsvp_view.py  runtime.py  settings_command.py  types.py  view_helpers.py
tests/: conftest.py  discord_mocks.py  fakes.py  test_app_handlers.py  test_event_logic.py  test_event_recurrence.py  test_permissions.py  test_recurrence_adapter.py  test_room_state.py  test_rsvp_domain.py  test_rsvp_store.py  test_rsvp_view.py  test_smoke.py
