[project]
name = "butler"
version = "0.1.0"
description = "Discord bot for creating same-day events with RSVP interactions"
authors = [{ name = "Jonathan Skårstedt" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "discord.py>=2.4.0,<3.0.0",
    "tomli>=2.0.1,<3.0.0; python_version < '3.11'",
    "dotenv (>=0.9.9,<0.10.0)",
    "tzdata (>=2025.2,<2027.0)",
]
[project.scripts]
butler = "butler.app:main"
butler-dev = "butler.app:main_dev"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.17,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pytest (>=8.0,<9.0)",
    "pytest-asyncio (>=0.24,<0.25)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
    "RUF",
    "C90",
]

[tool.ruff.lint.isort]
known-first-party = ["butler"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
files = ["butler", "bot.py", "tests"]
exclude = ["^\\.venv/"]
